<resources>
    <string name="app_name">FragmentAtRuntime</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fragment_demo">Fragment_Demo</string>
    <string name="new_user">New User</string>
    <string name="user">User</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>
