<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context=".RegisterFragment"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <EditText
        android:inputType="text"
        android:autofillHints="@string/second_fragment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
    </EditText>

    <EditText
        android:inputType="text"
        android:autofillHints="@string/second_fragment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
    </EditText>

    <EditText
        android:inputType="text"
        android:autofillHints="@string/second_fragment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </Button>

</LinearLayout>