<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <EditText
        android:inputType="text"
        android:autofillHints="@string/first_fragment_label"
        android:id="@+id/EditText1"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:autofillHints="@string/first_fragment_label"
        android:inputType="text"
        android:id="@+id/EditText2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    </EditText>
    
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </Button>
</LinearLayout>